--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test",
+  "name": "vue_test2.0",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "andy <lxh10182437>",
